# windchill-pyqt6-spring24P8

./: README.md  pyproject.toml
windchill_calculator/: app.py
